output.txt
g++ -w -Wall -std=c++20 -g -Iinclude -pthread -MMD -c test/new_tests/smp_test.cc -o build/test/new_tests/smp_test.o
In file included from include/../include/app/app-template.hh:27,
                 from test/new_tests/smp_test.cc:2:
include/../include/app/../future/future_all10.hh:6468:44: error: invalid use of incomplete type ‘class net::server_socket_impl’
 6468 | class posix_ap_server_socket_impl : public server_socket_impl {
      |                                            ^~~~~~~~~~~~~~~~~~
In file included from include/../include/app/app-template.hh:27,
                 from test/new_tests/smp_test.cc:2:
include/../include/app/../future/future_all10.hh:5534:7: note: forward declaration of ‘class net::server_socket_impl’
 5534 | class server_socket_impl;
      |       ^~~~~~~~~~~~~~~~~~
In file included from include/../include/app/app-template.hh:27,
                 from test/new_tests/smp_test.cc:2:
include/../include/app/../future/future_all10.hh:6487:41: error: invalid use of incomplete type ‘class net::server_socket_impl’
 6487 | class posix_server_socket_impl : public server_socket_impl {
      |                                         ^~~~~~~~~~~~~~~~~~
In file included from include/../include/app/app-template.hh:27,
                 from test/new_tests/smp_test.cc:2:
include/../include/app/../future/future_all10.hh:5534:7: note: forward declaration of ‘class net::server_socket_impl’
 5534 | class server_socket_impl;
      |       ^~~~~~~~~~~~~~~~~~
In file included from include/../include/app/app-template.hh:27,
                 from test/new_tests/smp_test.cc:2:
include/../include/app/../future/future_all10.hh:6499:51: error: invalid use of incomplete type ‘class net::server_socket_impl’
 6499 | class posix_reuseport_server_socket_impl : public server_socket_impl {
      |                                                   ^~~~~~~~~~~~~~~~~~
In file included from include/../include/app/app-template.hh:27,
                 from test/new_tests/smp_test.cc:2:
include/../include/app/../future/future_all10.hh:5534:7: note: forward declaration of ‘class net::server_socket_impl’
 5534 | class server_socket_impl;
      |       ^~~~~~~~~~~~~~~~~~
In file included from include/../include/app/app-template.hh:27,
                 from test/new_tests/smp_test.cc:2:
include/../include/app/../future/future_all10.hh:6516:15: error: ‘seastar’ in namespace ‘::’ does not name a type
 6516 |     virtual ::seastar::socket socket() override;
      |               ^~~~~~~
include/../include/app/../future/future_all10.hh: In constructor ‘net::posix_network_stack::posix_network_stack(boost::program_options::variables_map)’:
include/../include/app/../future/future_all10.hh:6514:97: error: invalid use of incomplete type ‘class reactor’
 6514 |     explicit posix_network_stack(boost::program_options::variables_map opts) : _reuseport(engine().posix_reuseport_available()) {}
      |                                                                                           ~~~~~~^~
In file included from include/../include/app/app-template.hh:27,
                 from test/new_tests/smp_test.cc:2:
include/../include/app/../future/future_all10.hh:1576:7: note: forward declaration of ‘class reactor’
 1576 | class reactor;
      |       ^~~~~~~
In file included from include/../include/app/app-template.hh:27,
                 from test/new_tests/smp_test.cc:2:
include/../include/app/../future/future_all10.hh: In static member function ‘static future<std::unique_ptr<network_stack, std::default_delete<network_stack> > > net::posix_network_stack::create(boost::program_options::variables_map)’:
include/../include/app/../future/future_all10.hh:6519:125: error: invalid new-expression of abstract class type ‘net::posix_network_stack’
 6519 |         return make_ready_future<std::unique_ptr<network_stack>>(std::unique_ptr<network_stack>(new posix_network_stack(opts)));
      |                                                                                                                             ^
include/../include/app/../future/future_all10.hh:6510:7: note:   because the following virtual functions are pure within ‘net::posix_network_stack’:
 6510 | class posix_network_stack : public network_stack {
      |       ^~~~~~~~~~~~~~~~~~~
In file included from include/../include/app/app-template.hh:27,
                 from test/new_tests/smp_test.cc:2:
include/../include/app/../future/future_all10.hh:5634:25: note:     ‘virtual net::socket network_stack::socket()’
 5634 |     virtual net::socket socket() = 0;
      |                         ^~~~~~
In file included from include/../include/app/app-template.hh:27,
                 from test/new_tests/smp_test.cc:2:
include/../include/app/../future/future_all10.hh: In constructor ‘net::posix_ap_network_stack::posix_ap_network_stack(boost::program_options::variables_map)’:
include/../include/app/../future/future_all10.hh:6528:129: error: invalid use of incomplete type ‘class reactor’
 6528 |     posix_ap_network_stack(boost::program_options::variables_map opts) : posix_network_stack(std::move(opts)), _reuseport(engine().posix_reuseport_available()) {}
      |                                                                                                                           ~~~~~~^~
In file included from include/../include/app/app-template.hh:27,
                 from test/new_tests/smp_test.cc:2:
include/../include/app/../future/future_all10.hh:1576:7: note: forward declaration of ‘class reactor’
 1576 | class reactor;
      |       ^~~~~~~
In file included from include/../include/app/app-template.hh:27,
                 from test/new_tests/smp_test.cc:2:
include/../include/app/../future/future_all10.hh: In static member function ‘static future<std::unique_ptr<network_stack, std::default_delete<network_stack> > > net::posix_ap_network_stack::create(boost::program_options::variables_map)’:
include/../include/app/../future/future_all10.hh:6531:128: error: invalid new-expression of abstract class type ‘net::posix_ap_network_stack’
 6531 |         return make_ready_future<std::unique_ptr<network_stack>>(std::unique_ptr<network_stack>(new posix_ap_network_stack(opts)));
      |                                                                                                                                ^
include/../include/app/../future/future_all10.hh:6524:7: note:   because the following virtual functions are pure within ‘net::posix_ap_network_stack’:
 6524 | class posix_ap_network_stack : public posix_network_stack {
      |       ^~~~~~~~~~~~~~~~~~~~~~
In file included from include/../include/app/app-template.hh:27,
                 from test/new_tests/smp_test.cc:2:
include/../include/app/../future/future_all10.hh:5634:25: note:     ‘virtual net::socket network_stack::socket()’
 5634 |     virtual net::socket socket() = 0;
      |                         ^~~~~~
In file included from include/../include/app/app-template.hh:27,
                 from test/new_tests/smp_test.cc:2:
include/../include/app/../future/future_all10.hh: In lambda function:
include/../include/app/../future/future_all10.hh:12986:37: error: ‘posix_network_stack’ has not been declared
12986 |         return smp::main_thread() ? posix_network_stack::create(ops) : posix_ap_network_stack::create(ops);
      |                                     ^~~~~~~~~~~~~~~~~~~
include/../include/app/../future/future_all10.hh:12986:72: error: ‘posix_ap_network_stack’ has not been declared
12986 |         return smp::main_thread() ? posix_network_stack::create(ops) : posix_ap_network_stack::create(ops);
      |                                                                        ^~~~~~~~~~~~~~~~~~~~~~
include/../include/app/../future/future_all10.hh: At global scope:
include/../include/app/../future/future_all10.hh:12989:1: error: no matching function for call to ‘network_stack_registrator::network_stack_registrator(<brace-enclosed initializer list>)’
12989 | };
      | ^
include/../include/app/../future/future_all10.hh:12976:1: note: candidate: ‘network_stack_registrator::network_stack_registrator(sstring, boost::program_options::options_description, std::function<future<std::unique_ptr<network_stack, std::default_delete<network_stack> > >(boost::program_options::variables_map)>, bool)’
12976 | network_stack_registrator::network_stack_registrator(sstring name,
      | ^~~~~~~~~~~~~~~~~~~~~~~~~
include/../include/app/../future/future_all10.hh:12978:77: note:   no known conversion for argument 3 from ‘<lambda(boost::program_options::variables_map)>’ to ‘std::function<future<std::unique_ptr<network_stack, std::default_delete<network_stack> > >(boost::program_options::variables_map)>’
12978 |         std::function<future<std::unique_ptr<network_stack>>(options opts)> factory,
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
In file included from include/../include/app/app-template.hh:27,
                 from test/new_tests/smp_test.cc:2:
include/../include/app/../future/future_all10.hh:5674:7: note: candidate: ‘constexpr network_stack_registrator::network_stack_registrator(const network_stack_registrator&)’
 5674 | class network_stack_registrator {
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~
include/../include/app/../future/future_all10.hh:5674:7: note:   candidate expects 1 argument, 4 provided
include/../include/app/../future/future_all10.hh:5674:7: note: candidate: ‘constexpr network_stack_registrator::network_stack_registrator(network_stack_registrator&&)’
include/../include/app/../future/future_all10.hh:5674:7: note:   candidate expects 1 argument, 4 provided
makefile:31: recipe for target 'build/test/new_tests/smp_test.o' failed
make: *** [build/test/new_tests/smp_test.o] Error 1
